# btcbot

./: .dockerignore  .env.example  .env.prod.example  .env.stage.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BUG_002_FIX_REPORT.md  BUG_FIX_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GEMINI.md  PRD.md  README.md  TRADE_SYSTEM_ANALYSIS.md  alembic.ini  config.py  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_bug_fixes.py  test_client.py  test_fastapi_endpoints.py
.github/: pull_request_template.md
docs/: BE-WS-007-VERIFICATION.md  BRANCH_PROTECTION.md  GITFLOW.md  HOMESERVER_SETUP.md  SECRETS.md  SELFHOSTED_RUNNER.md  features_comparison.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
migrations/: env.py  script.py.mako
product-plan/: README.md  product-overview.md
scripts/: backup_db.sh  clear_stage_db.py  restore_db.sh
tasks/: PROGRESS.md  README.md  tasks_backend.md  tasks_bugfixes.md  tasks_database.md  tasks_devops.md  tasks_frontend.md
tests/: test_activity_api.py  test_activity_event_logging.py  test_auth_api.py  test_basic.py  test_bingx_client.py  test_bot_control_api.py  test_bug_002_fixes.py  test_bug_003_duplicate_orders.py  test_bug_004_cancel_on_filter_change.py  test_bug_004_entry_prices_from_tp.py  test_bug_045_order_detection.py  test_filters.py  (+24 more)
(+276 files in other folders)
